namespaces/live.cloud-platform.service.justice.gov.uk/laa-benefit-checker-interim-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-benefit-checker-interim-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-connect-public"
    cloud-platform.justice.gov.uk/application: "LAA Benefit Checker 1.1"
    cloud-platform.justice.gov.uk/owner: "LAA Connect: access-court-data-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-dwp-benefit-checker"
    cloud-platform.justice.gov.uk/team-name: "laa-access-court-data"
    cloud-platform.justice.gov.uk/review-after: ""
